--- a/style/css/main.css
+++ b/style/css/main.css
@@ -231,144 +231,152 @@
     #section-3 .form-section .form-inputs-container {
       padding: 26px 0;
       flex-wrap: wrap; }
-      #section-3 .form-section .form-inputs-container .w50 {
-        padding: 8px 0; }
-        #section-3 .form-section .form-inputs-container .w50 .form-item {
+      #section-3 .form-section .form-inputs-container .form-item {
+        display: flex;
+        align-items: flex-start;
+        padding: 0 50px;
+        margin-bottom: 20px; }
+        #section-3 .form-section .form-inputs-container .form-item .form-label-star {
+          color: #20c5ba;
+          padding: 1px 10px;
+          font-size: 21px;
+          font-weight: bold; }
+        #section-3 .form-section .form-inputs-container .form-item input,
+        #section-3 .form-section .form-inputs-container .form-item select,
+        #section-3 .form-section .form-inputs-container .form-item option,
+        #section-3 .form-section .form-inputs-container .form-item textarea {
+          font-family: YekanBakh;
+          font-size: 18px;
+          background-color: white;
+          width: 100%;
+          height: 40px;
+          border: 1px solid #dbe4f2;
+          border-radius: 12px;
+          outline: none;
+          padding: 10px; }
+          #section-3 .form-section .form-inputs-container .form-item input:hover, #section-3 .form-section .form-inputs-container .form-item input:active, #section-3 .form-section .form-inputs-container .form-item input:focus, #section-3 .form-section .form-inputs-container .form-item input:focus-within, #section-3 .form-section .form-inputs-container .form-item input:focus-visible,
+          #section-3 .form-section .form-inputs-container .form-item select:hover,
+          #section-3 .form-section .form-inputs-container .form-item select:active,
+          #section-3 .form-section .form-inputs-container .form-item select:focus,
+          #section-3 .form-section .form-inputs-container .form-item select:focus-within,
+          #section-3 .form-section .form-inputs-container .form-item select:focus-visible,
+          #section-3 .form-section .form-inputs-container .form-item option:hover,
+          #section-3 .form-section .form-inputs-container .form-item option:active,
+          #section-3 .form-section .form-inputs-container .form-item option:focus,
+          #section-3 .form-section .form-inputs-container .form-item option:focus-within,
+          #section-3 .form-section .form-inputs-container .form-item option:focus-visible,
+          #section-3 .form-section .form-inputs-container .form-item textarea:hover,
+          #section-3 .form-section .form-inputs-container .form-item textarea:active,
+          #section-3 .form-section .form-inputs-container .form-item textarea:focus,
+          #section-3 .form-section .form-inputs-container .form-item textarea:focus-within,
+          #section-3 .form-section .form-inputs-container .form-item textarea:focus-visible {
+            border: 2px solid #20c5ba;
+            border-radius: 12px; }
+          #section-3 .form-section .form-inputs-container .form-item input:disabled,
+          #section-3 .form-section .form-inputs-container .form-item select:disabled,
+          #section-3 .form-section .form-inputs-container .form-item option:disabled,
+          #section-3 .form-section .form-inputs-container .form-item textarea:disabled {
+            background-color: #e7ecf4; }
+        #section-3 .form-section .form-inputs-container .form-item textarea {
+          height: 200px; }
+        #section-3 .form-section .form-inputs-container .form-item ::placeholder {
+          /* Chrome, Firefox, Opera, Safari 10.1+ */
+          color: #9db0cb;
+          opacity: 1;
+          /* Firefox */
+          font-family: YekanBakh;
+          font-size: 16px; }
+        #section-3 .form-section .form-inputs-container .form-item :-ms-input-placeholder {
+          /* Internet Explorer 10-11 */
+          color: #9db0cb;
+          font-family: YekanBakh;
+          font-size: 16px; }
+        #section-3 .form-section .form-inputs-container .form-item ::-ms-input-placeholder {
+          /* Microsoft Edge */
+          color: #9db0cb;
+          font-family: YekanBakh;
+          font-size: 16px; }
+        #section-3 .form-section .form-inputs-container .form-item label.custom-file-upload {
+          width: 100%;
+          height: 40px;
+          border: 1px solid #dbe4f2;
+          border-radius: 12px;
+          outline: none;
+          padding: 10px;
+          display: inline-block;
+          cursor: pointer;
+          background-color: white;
+          margin-bottom: 0 !important;
+          position: relative;
+          font-size: 14px;
+          font-weight: bold;
+          color: #20c5ba; }
+          #section-3 .form-section .form-inputs-container .form-item label.custom-file-upload input[type="file"] {
+            display: none !important; }
+          #section-3 .form-section .form-inputs-container .form-item label.custom-file-upload:hover, #section-3 .form-section .form-inputs-container .form-item label.custom-file-upload:active {
+            border: 1px solid #20c5ba !important; }
+            #section-3 .form-section .form-inputs-container .form-item label.custom-file-upload:hover .file-btn, #section-3 .form-section .form-inputs-container .form-item label.custom-file-upload:active .file-btn {
+              background-color: #20c5ba !important;
+              color: white !important;
+              border: 1px solid #20c5ba !important;
+              border-left: 0;
+              border-top: 0; }
+        #section-3 .form-section .form-inputs-container .form-item .file-btn {
+          position: absolute;
+          left: 0;
+          top: 0;
+          height: 39px;
+          border-radius: 12px;
+          background-color: #eef2f7;
+          color: #9db0cb;
+          font-weight: bold;
+          font-size: 16px;
+          border: 1px solid #dbe4f2;
+          border-left: 0;
+          border-top: 0;
+          padding: 10px;
+          font-family: YekanBakh; }
+        #section-3 .form-section .form-inputs-container .form-item .file-info-container {
+          font-size: 14px;
           display: flex;
-          align-items: center;
-          padding: 0 50px; }
-          #section-3 .form-section .form-inputs-container .w50 .form-item .form-label-star {
-            color: #20c5ba;
-            padding: 1px 10px;
-            font-size: 21px;
-            font-weight: bold; }
-          #section-3 .form-section .form-inputs-container .w50 .form-item input,
-          #section-3 .form-section .form-inputs-container .w50 .form-item select,
-          #section-3 .form-section .form-inputs-container .w50 .form-item option {
-            font-family: YekanBakh;
-            font-size: 18px;
-            background-color: white;
-            width: 100%;
-            height: 40px;
-            border: 1px solid #dbe4f2;
-            border-radius: 12px;
-            outline: none;
-            padding: 10px; }
-            #section-3 .form-section .form-inputs-container .w50 .form-item input:hover, #section-3 .form-section .form-inputs-container .w50 .form-item input:active, #section-3 .form-section .form-inputs-container .w50 .form-item input:focus, #section-3 .form-section .form-inputs-container .w50 .form-item input:focus-within, #section-3 .form-section .form-inputs-container .w50 .form-item input:focus-visible,
-            #section-3 .form-section .form-inputs-container .w50 .form-item select:hover,
-            #section-3 .form-section .form-inputs-container .w50 .form-item select:active,
-            #section-3 .form-section .form-inputs-container .w50 .form-item select:focus,
-            #section-3 .form-section .form-inputs-container .w50 .form-item select:focus-within,
-            #section-3 .form-section .form-inputs-container .w50 .form-item select:focus-visible,
-            #section-3 .form-section .form-inputs-container .w50 .form-item option:hover,
-            #section-3 .form-section .form-inputs-container .w50 .form-item option:active,
-            #section-3 .form-section .form-inputs-container .w50 .form-item option:focus,
-            #section-3 .form-section .form-inputs-container .w50 .form-item option:focus-within,
-            #section-3 .form-section .form-inputs-container .w50 .form-item option:focus-visible {
-              border: 2px solid #20c5ba;
-              border-radius: 12px; }
-            #section-3 .form-section .form-inputs-container .w50 .form-item input:disabled,
-            #section-3 .form-section .form-inputs-container .w50 .form-item select:disabled,
-            #section-3 .form-section .form-inputs-container .w50 .form-item option:disabled {
-              background-color: #e7ecf4; }
-          #section-3 .form-section .form-inputs-container .w50 .form-item ::placeholder {
-            /* Chrome, Firefox, Opera, Safari 10.1+ */
-            color: #9db0cb;
-            opacity: 1;
-            /* Firefox */
-            font-family: YekanBakh;
-            font-size: 16px; }
-          #section-3 .form-section .form-inputs-container .w50 .form-item :-ms-input-placeholder {
-            /* Internet Explorer 10-11 */
-            color: #9db0cb;
-            font-family: YekanBakh;
-            font-size: 16px; }
-          #section-3 .form-section .form-inputs-container .w50 .form-item ::-ms-input-placeholder {
-            /* Microsoft Edge */
-            color: #9db0cb;
-            font-family: YekanBakh;
-            font-size: 16px; }
-          #section-3 .form-section .form-inputs-container .w50 .form-item label.custom-file-upload {
-            width: 100%;
-            height: 40px;
-            border: 1px solid #dbe4f2;
-            border-radius: 12px;
-            outline: none;
-            padding: 10px;
-            display: inline-block;
-            cursor: pointer;
-            background-color: white;
-            margin-bottom: 0 !important;
-            position: relative;
-            font-size: 14px;
-            font-weight: bold;
-            color: #20c5ba; }
-            #section-3 .form-section .form-inputs-container .w50 .form-item label.custom-file-upload input[type="file"] {
-              display: none !important; }
-            #section-3 .form-section .form-inputs-container .w50 .form-item label.custom-file-upload:hover, #section-3 .form-section .form-inputs-container .w50 .form-item label.custom-file-upload:active {
-              border: 1px solid #20c5ba !important; }
-              #section-3 .form-section .form-inputs-container .w50 .form-item label.custom-file-upload:hover .file-btn, #section-3 .form-section .form-inputs-container .w50 .form-item label.custom-file-upload:active .file-btn {
-                background-color: #20c5ba !important;
-                color: white !important;
-                border: 1px solid #20c5ba !important;
-                border-left: 0;
-                border-top: 0; }
-          #section-3 .form-section .form-inputs-container .w50 .form-item .file-btn {
-            position: absolute;
-            left: 0;
-            top: 0;
-            height: 39px;
-            border-radius: 12px;
-            background-color: #eef2f7;
-            color: #9db0cb;
-            font-weight: bold;
-            font-size: 16px;
-            border: 1px solid #dbe4f2;
-            border-left: 0;
-            border-top: 0;
-            padding: 10px;
-            font-family: YekanBakh; }
-          #section-3 .form-section .form-inputs-container .w50 .form-item .file-info-container {
-            font-size: 14px;
-            display: flex;
-            justify-content: end; }
-            #section-3 .form-section .form-inputs-container .w50 .form-item .file-info-container .file-info {
-              color: #9db0cb; }
-            #section-3 .form-section .form-inputs-container .w50 .form-item .file-info-container .file-warn {
-              color: red;
-              display: none; }
-          #section-3 .form-section .form-inputs-container .w50 .form-item .form-select-wrapper {
-            position: relative; }
-          #section-3 .form-section .form-inputs-container .w50 .form-item .icon {
-            position: absolute;
-            top: 12px;
-            left: 18px;
-            color: #9db0cb;
-            font-size: 15px;
+          justify-content: end; }
+          #section-3 .form-section .form-inputs-container .form-item .file-info-container .file-info {
             color: #9db0cb; }
-            #section-3 .form-section .form-inputs-container .w50 .form-item .icon:hover {
-              cursor: pointer; }
-          #section-3 .form-section .form-inputs-container .w50 .form-item ul.form-option-container {
-            position: absolute;
-            top: -2px;
-            left: 0;
-            margin-top: 2px;
-            width: 100%;
-            background-color: white;
-            border: 1px solid #d5dde7;
-            border-radius: 12px;
-            list-style: none; }
-            #section-3 .form-section .form-inputs-container .w50 .form-item ul.form-option-container li {
-              height: 40px;
-              padding: 10px 20px;
-              font-size: 16px;
-              border-radius: 12px; }
-              #section-3 .form-section .form-inputs-container .w50 .form-item ul.form-option-container li:not(:first-of-type) {
-                color: #6a7d9b; }
-                #section-3 .form-section .form-inputs-container .w50 .form-item ul.form-option-container li:not(:first-of-type):hover {
-                  cursor: pointer;
-                  background-color: #e9edf5;
-                  color: #20c5ba; }
+          #section-3 .form-section .form-inputs-container .form-item .file-info-container .file-warn {
+            color: red;
+            display: none; }
+        #section-3 .form-section .form-inputs-container .form-item .form-select-wrapper {
+          position: relative; }
+        #section-3 .form-section .form-inputs-container .form-item .icon {
+          position: absolute;
+          top: 12px;
+          left: 18px;
+          color: #9db0cb;
+          font-size: 15px;
+          color: #9db0cb; }
+          #section-3 .form-section .form-inputs-container .form-item .icon:hover {
+            cursor: pointer; }
+        #section-3 .form-section .form-inputs-container .form-item ul.form-option-container {
+          position: absolute;
+          top: -2px;
+          left: 0;
+          margin-top: 2px;
+          width: 100%;
+          background-color: white;
+          border: 1px solid #d5dde7;
+          border-radius: 12px;
+          list-style: none; }
+          #section-3 .form-section .form-inputs-container .form-item ul.form-option-container li {
+            height: 40px;
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 12px; }
+            #section-3 .form-section .form-inputs-container .form-item ul.form-option-container li:not(:first-of-type) {
+              color: #6a7d9b; }
+              #section-3 .form-section .form-inputs-container .form-item ul.form-option-container li:not(:first-of-type):hover {
+                cursor: pointer;
+                background-color: #e9edf5;
+                color: #20c5ba; }
 
 * {
   margin: 0;
@@ -401,6 +409,9 @@ body {
 
 .align-center {
   align-items: center; }
+
+.align-start {
+  align-items: flex-start; }
 
 .main-title {
   color: #0b3a42;
@@ -451,11 +462,23 @@ body {
 .w100 {
   width: 100%; }
 
+.w90 {
+  width: 90%; }
+
 .w80 {
   width: 80%; }
+
+.w85 {
+  width: 85%; }
 
 .w50 {
   width: 50%; }
 
 .w20 {
   width: 20%; }
+
+.w15 {
+  width: 15%; }
+
+.w10 {
+  width: 10%; }
