--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -44,6 +44,9 @@ body {
 .align-center {
   align-items: center;
 }
+.align-start {
+  align-items: flex-start;
+}
 
 .main-title {
   color: $green_darken_3;
@@ -87,12 +90,24 @@ body {
 .w100 {
   width: 100%;
 }
+.w90 {
+  width: 90%;
+}
 .w80 {
   width: 80%;
+}
+.w85 {
+  width: 85%;
 }
 .w50 {
   width: 50%;
 }
 .w20 {
   width: 20%;
+}
+.w15 {
+  width: 15%;
+}
+.w10 {
+  width: 10%;
 }
