--- a/style/sass/_variables.scss
+++ b/style/sass/_variables.scss
@@ -7,6 +7,7 @@ $green_darken_1: #0e7571;
 $green_darken_2: #155a6d;
 $green_darken_3: #0b3a42;
 $green_darken_4: #033432;
+$green_darken_5: #009191;
 
 $gray_ligthen_1: #f6f8fb;
 $gray_lighten_2: #e7ecf4;
