--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -16,6 +16,7 @@
 
 ul {
   margin: 0;
+  list-style: none;
 }
 
 html,
@@ -42,8 +43,19 @@ textarea {
 .d-flex {
   display: flex;
 }
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-column {
+  flex-direction: column;
+}
 .justify-space-between {
   justify-content: space-between;
+}
+.justify-center {
+  justify-content: center;
 }
 .justify-end {
   justify-content: flex-end;
