--- a/style/sass/_variables.scss
+++ b/style/sass/_variables.scss
@@ -1,7 +1,9 @@
 $container_width: 1140px;
 $main_font_size: 18px;
+$mobile_main_font_size: 14px;
 $background_gray: #f5f7fa;
 $primary_color: #20c5ba;
+$primary_light_color: rgba(32, 197, 186, 0.1);
 
 $green_darken_1: #0e7571;
 $green_darken_2: #155a6d;
