--- a/style/css/main.css
+++ b/style/css/main.css
@@ -11,6 +11,7 @@
   src: url("../../assets/YekanBakh-Bold/YekanBakh-Bold.eot") format("eot"), url("../../assets/YekanBakh-Bold/YekanBakh-Bold.ttf") format("ttf"), url("../../assets/YekanBakh-Bold/YekanBakh-Bold.woff") format("woff"); }
 
 .header {
+  width: 100%;
   background-color: #f5f7fa;
   font-weight: bold;
   display: flex;
@@ -409,11 +410,11 @@ button,
 textarea {
   font-family: YekanBakh;
   font-weight: normal;
-  font-size: 18px; }
+  font-size: 18px;
+  background-color: #f5f7fa; }
 
 .wrapper {
-  height: 100%;
-  background-color: #f5f7fa; }
+  height: 100%; }
 
 .main-container {
   height: 100%;
