--- a/style/css/main.css
+++ b/style/css/main.css
@@ -46,44 +46,44 @@
         .iconic-tabs ul li .tab-item .tab-title {
           margin-right: 3px; }
 
-.content {
+#section-1 .content {
   padding: 55px 57px;
   border-radius: 16px;
   border-top-right-radius: 0;
   background-color: white; }
-  .content ul li .menu-text::before {
+  #section-1 .content ul li .menu-text::before {
     content: "\2022";
     /* Add content: \2022 is the CSS Code/unicode for a bullet */
     color: #20c5ba;
     font-weight: bold;
     width: 1em;
     margin-left: 1em; }
-  .content ul li {
+  #section-1 .content ul li {
     padding: 25px 50px; }
-    .content ul li.active {
+    #section-1 .content ul li.active {
       border: 3px solid #20c5ba;
       border-radius: 16px; }
-  .content .icon {
+  #section-1 .content .icon {
     padding: 4px 9px 2px;
     background-color: #e7ecf4;
     border-radius: 50%; }
-    .content .icon:hover {
+    #section-1 .content .icon:hover {
       cursor: pointer; }
-    .content .icon.active {
+    #section-1 .content .icon.active {
       background-color: #20c5ba; }
-      .content .icon.active .fa-chevron-up,
-      .content .icon.active .fa-chevron-down {
+      #section-1 .content .icon.active .fa-chevron-up,
+      #section-1 .content .icon.active .fa-chevron-down {
         color: white; }
-    .content .icon .fa-chevron-up,
-    .content .icon .fa-chevron-down {
+    #section-1 .content .icon .fa-chevron-up,
+    #section-1 .content .icon .fa-chevron-down {
       color: #9db0cb;
       font-size: 10px; }
-  .content .menu-details .title-list {
+  #section-1 .content .menu-details .title-list {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 60px; }
-    .content .menu-details .title-list .title-card {
+    #section-1 .content .menu-details .title-list .title-card {
       background-color: #f6f8fb;
       width: 170px;
       height: 160px;
@@ -92,51 +92,51 @@
       justify-content: center;
       align-items: center;
       flex-direction: column; }
-      .content .menu-details .title-list .title-card .title {
+      #section-1 .content .menu-details .title-list .title-card .title {
         padding-bottom: 10px;
         padding-top: 15px; }
-      .content .menu-details .title-list .title-card .subtitle {
+      #section-1 .content .menu-details .title-list .title-card .subtitle {
         color: #6a7d9b;
         font-size: 16px; }
-  .content .menu-details .description {
+  #section-1 .content .menu-details .description {
     padding: 60px 90px; }
-    .content .menu-details .description ul {
+    #section-1 .content .menu-details .description ul {
       font-size: 16px;
       color: #6a7d9b; }
-      .content .menu-details .description ul li {
+      #section-1 .content .menu-details .description ul li {
         padding: 10px 50px; }
-      .content .menu-details .description ul li .menu-text::before {
+      #section-1 .content .menu-details .description ul li .menu-text::before {
         content: "\2022";
         /* Add content: \2022 is the CSS Code/unicode for a bullet */
         color: #20c5ba;
         font-weight: bold;
         width: 1em;
         margin-left: 1em; }
-    .content .menu-details .description .title {
+    #section-1 .content .menu-details .description .title {
       padding-right: 50px; }
-  .content .menu-details .menu-link {
+  #section-1 .content .menu-details .menu-link {
     border-radius: 16px;
     border: 2px solid #e7ecf4;
     margin: 0 60px;
     padding: 12px 30px; }
-    .content .menu-details .menu-link .link-info {
+    #section-1 .content .menu-details .menu-link .link-info {
       padding: 0 50px; }
-      .content .menu-details .menu-link .link-info .url {
+      #section-1 .content .menu-details .menu-link .link-info .url {
         color: #6a7d9b;
         font-size: 16px; }
-    .content .menu-details .menu-link .author {
+    #section-1 .content .menu-details .menu-link .author {
       color: #6a7d9b;
       font-size: 16px;
       font-weight: bold;
       border-radius: 16px;
       border: 2px solid #e7ecf4;
       padding: 5px 20px; }
-      .content .menu-details .menu-link .author .img-container {
+      #section-1 .content .menu-details .menu-link .author .img-container {
         width: 24px;
         max-width: 24px;
         height: 24px;
         max-height: 24px; }
-        .content .menu-details .menu-link .author .img-container img {
+        #section-1 .content .menu-details .menu-link .author .img-container img {
           width: 100%;
           max-width: 100%;
           max-height: 100%;
@@ -515,7 +515,7 @@ textarea {
 .w10 {
   width: 10%; }
 
-@media only screen and (max-width: 426px) {
+@media only screen and (max-width: 768px) {
   .main-title {
     font-size: 24px; }
   .header {
