--- a/style/sass/_section_1.scss
+++ b/style/sass/_section_1.scss
@@ -61,6 +61,7 @@
     .menu-details {
       .title-list {
         display: flex;
+        flex-direction: row;
         justify-content: space-between;
         align-items: center;
         padding: 10px 60px;
