--- a/style/sass/_responsive.scss
+++ b/style/sass/_responsive.scss
@@ -76,6 +76,46 @@
             margin-bottom: 20px;
           }
         }
+
+        .description {
+          margin: 0 10px;
+          padding: 30px;
+          border: 1px solid $gray_lighten_2;
+          border-radius: 12px;
+          ul {
+            padding: 20px 0;
+            li {
+              padding: 10px 0;
+              background-color: white;
+              margin-bottom: 0;
+            }
+          }
+        }
+
+        .menu-link {
+          margin: 10px;
+          flex-direction: column;
+          flex-wrap: wrap;
+          align-items: flex-start;
+
+          .link-container {
+            // flex-direction: column;
+          }
+          .author {
+            display: none;
+          }
+
+          .suggestion-btn {
+            display: block;
+            background-color: $primary_color;
+            color: white;
+            border-radius: 12px;
+            border: none;
+            width: 100%;
+            height: 40px;
+            margin: 10px auto;
+          }
+        }
       }
     }
   }
