--- a/style/sass/_responsive.scss
+++ b/style/sass/_responsive.scss
@@ -84,6 +84,7 @@
           border-radius: 12px;
           ul {
             padding: 20px 0;
+
             li {
               padding: 10px 0;
               background-color: white;
@@ -99,7 +100,14 @@
           align-items: flex-start;
 
           .link-container {
-            // flex-direction: column;
+            flex-direction: row;
+            flex-wrap: wrap;
+            .link-info {
+              padding: 0;
+              .url {
+                word-break: break-all;
+              }
+            }
           }
           .author {
             display: none;
@@ -108,12 +116,53 @@
           .suggestion-btn {
             display: block;
             background-color: $primary_color;
+            font-size: 16px;
+            font-weight: bold;
             color: white;
             border-radius: 12px;
             border: none;
             width: 100%;
             height: 40px;
             margin: 10px auto;
+          }
+        }
+      }
+    }
+  }
+
+  #section-2 {
+    margin-top: 80px;
+    padding: 100px 0 456px;
+    .subtitle {
+      font-size: $mobile_main_font_size;
+    }
+    .simple-tabs {
+      border-bottom: none;
+      padding: 10px 0;
+      ul {
+        font-size: $mobile_main_font_size;
+        overflow-x: visible;
+        display: flex;
+
+        li {
+          padding: 9px;
+          background-color: $primary_color;
+          color: white;
+          border-radius: 12px;
+          margin-left: 12px;
+          white-space: nowrap;
+
+          &:hover,
+          &.active {
+            background-color: $primary_light_color;
+            color: $primary_color;
+          }
+
+          .tab-title {
+            padding: 0;
+            &:hover {
+              border: none;
+            }
           }
         }
       }
