--- a/style/sass/_section_3.scss
+++ b/style/sass/_section_3.scss
@@ -180,6 +180,7 @@
           background-color: white;
           border: 1px solid #d5dde7;
           border-radius: 12px;
+          z-index: 1000;
 
           li {
             height: 40px;
