--- a/style/sass/_responsive.scss
+++ b/style/sass/_responsive.scss
@@ -185,4 +185,23 @@
       }
     }
   }
+
+  #section-3 {
+    padding: 70px 0;
+    .main-container {
+      padding: 0;
+    }
+
+    .w50 {
+      width: 100%;
+    }
+
+    .form-section {
+      .form-inputs-container {
+        .form-item {
+          padding: 0 20px;
+        }
+      }
+    }
+  }
 }
