--- a/style/css/main.css
+++ b/style/css/main.css
@@ -47,10 +47,13 @@
           margin-right: 3px; }
 
 #section-1 .content {
+  display: none;
   padding: 55px 57px;
   border-radius: 16px;
   border-top-right-radius: 0;
   background-color: white; }
+  #section-1 .content.active {
+    display: block; }
   #section-1 .content ul li .menu-text::before {
     content: "\2022";
     /* Add content: \2022 is the CSS Code/unicode for a bullet */
