--- a/style/sass/_section_2.scss
+++ b/style/sass/_section_2.scss
@@ -2,7 +2,7 @@
   margin-top: 230px;
   background-color: $gray_lighten_3;
   //   temporary padding
-  padding: 155px 0 465px;
+  padding: 155px 0;
   min-height: 500px;
 
   .title {
@@ -17,10 +17,10 @@
 
   .simple-tabs {
     padding: 0 45px;
-    border-bottom: 1px solid $gray_lighten_6;
 
     ul {
       position: relative;
+      border-bottom: 1px solid $gray_lighten_6;
 
       li {
         display: inline-block;
@@ -42,33 +42,35 @@
           .tab-title {
             border-bottom: 2px solid $primary_color;
           }
-
-          .tab-content {
-            background-color: white;
-            position: absolute;
-            top: 100%;
-            right: 0;
-            margin: 45px 51px 0 45px;
-            width: 921px;
-            color: $gray_darken_1;
-            border: 1px solid $primary_color;
-            padding: 35px;
-
-            .first-title {
-              color: $green_darken_1;
-              font-size: 24px;
-              font-weight: bold;
-            }
-            .details {
-              padding: 30px 0;
-            }
-
-            .second-title {
-              color: $primary_color;
-              font-weight: bold;
-            }
-          }
         }
+      }
+    }
+
+    .tab-content {
+      display: none;
+      background-color: white;
+      margin: 45px auto;
+      width: 80%;
+      color: $gray_darken_1;
+      border: 1px solid $primary_color;
+      padding: 35px;
+
+      &.active {
+        display: block;
+      }
+
+      .first-title {
+        color: $green_darken_1;
+        font-size: 24px;
+        font-weight: bold;
+      }
+      .details {
+        padding: 30px 0;
+      }
+
+      .second-title {
+        color: $primary_color;
+        font-weight: bold;
       }
     }
   }
